2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/openlayers.pandora.js: deleted the console log debug
	print.

2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: cleaned source code of "printMap", now it is
	more clean the code because it call the js_printMap only and it haven't the
	num zoom levels.
	
	* include/javascript/openlayers.pandora.js: cleaned source code of
	"js_printMap", now it is more clean the code and it haven't the num zoom
	levels.

	* operation/gis_maps/render_view.php, godmode/setup/gis_step_2.php,
	godmode/gis_maps/configure_gis_map.php: use new form of "printMap" and
	"js_printMap".

2010-03-08  Pablo de la Concepción <pablo.concepcion@artica.es>

	New theme for the maps: New images and background color for the Openlayers
	controls.

	* include/javascript/OpenLayers/OpenLayers.js: Channged background color
	on some components to fit the new theme.

	* include/javascript/OpenLayers/img/south-mini.png, 
	include/javascript/OpenLayers/img/zoom-plus-mini.png, 
	include/javascript/OpenLayers/img/zoom-world-mini.png, 
	include/javascript/OpenLayers/img/zoom-minus-mini.png, 
	include/javascript/OpenLayers/img/zoombar.png, 
	include/javascript/OpenLayers/img/west-mini.png, 
	include/javascript/OpenLayers/img/slider.png, 
	include/javascript/OpenLayers/img/layer-switcher-maximize.png, 
	include/javascript/OpenLayers/img/north-mini.png, 
	include/javascript/OpenLayers/img/east-mini.png: New images for the new
	theme of the Openlayers controls.

2010-03-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: change the code into function
	"html_entity_decode" for fix the decode in IE6 and rename the function to
	"js_html_entity_decode" for clean source code.
	
	* include/javascript/jquery.pandora.controls.js,
	include/javascript/pandora_modules.js, godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_action.php,